MANTIS-17032: Imported the unmodified RCP 2023-03 launcher code (org.eclipse.* source files)